# c_naive_extensions

./: CMakeLists.txt  flake.nix  readme.md  todo.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt
bench/data_structure/: CMakeLists.txt  bench_nx_vec.c
bench/ds/: CMakeLists.txt  bench_vec.c
demo/: CMakeLists.txt
demo/core/: CMakeLists.txt  demo_print.c
demo/data_structure/: CMakeLists.txt  demo_arr.c  demo_vec.c
demo/ds/: demo_arr.c  demo_vec.c
demo/str/: CMakeLists.txt  demo_str.c
example/: CMakeLists.txt
example/data_structure/: arr.c
include/nx/: nx.h
include/nx/algo/: algo.h  algo_bit.h  algo_numeric.h  algo_span.h  bit.h  compare.h  merge.h  minmax.h  search.h  sort.h  transform.h
include/nx/core/: assert.h  checked_arith.h  cmp.h  config.h  core.h  fn.h  hash.h  limit.h  limits.h  optional.h  panic.h  print.h  range.h  result.h  span.h  status.h  type.h  util.h
include/nx/data_structure/: arr.h  vec.h
include/nx/ds/: arr.h  ds.h  hash_map.h  span.h  vec.h
include/nx/fs/: fs.h
include/nx/io/: dbg.h  fmt.h  io.h  log.h  print.h
include/nx/mem/: alloc.h  alloc_arena.h  alloc_libc.h  alloc_log.h  alloc_pool.h  byte.h  mem.h  ptr.h
include/nx/numeric/: abs.h  bit.h  bounds.h  ckd.h  constants.h  fp.h  limit.h  minmax.h  numeric.h  sat.h  sign.h
include/nx/rand/: rand.h
include/nx/str/: str.h  str_view.h
include/nx/string/: str.h  str_view.h  string.h
include/nx/util/: util.h
src/algo/: algo.c  algo_bit.c  algo_numeric.c  algo_span.c  bit.c  compare.c  merge.c  minmax.c  search.c  sort.c  transform.c
src/core/: assert.c  checked_arith.c  cmp.c  hash.c  print.c  span.c  status.c
src/data_structure/: arr.c  vec.c
src/ds/: arr.c  hash_map.c  span.c  vec.c
src/fs/: fs.c
src/io/: dbg.c  log.c  print.c
src/mem/: alloc.c  alloc_arena.c  alloc_libc.c  alloc_log.c  alloc_pool.c  byte.c  ptr.c
src/numeric/: abs.c  bit.c  bounds.c  ckd.c  fp.c  minmax.c  sat.c  sign.c
src/rand/: rand.c
src/str/: str.c  str_view.c
src/string/: str.c  str_view.c
test/: CMakeLists.txt  test_algo.c  test_arr.c  test_span.c  test_vec.c
test/algo/: CMakeLists.txt  test_algo.c  test_algo_compare.c  test_algo_merge.c  test_algo_minmax.c  test_algo_search.c  test_algo_sort.c  test_algo_transform.c  test_compare.c  test_minmax.c  test_search.c  test_sort.c  test_transform.c
test/core/: CMakeLists.txt  test_core_hash.c  test_core_optional.c  test_core_status.c  test_core_type.c  test_hash.c  test_span.c  test_status.c  test_type.c
test/data_structure/: CMakeLists.txt  test_arr.c  test_vec.c
test/ds/: CMakeLists.txt  test_arr.c  test_ds_arr.c  test_ds_hash_map.c  test_ds_span.c  test_ds_vec.c  test_span.c  test_vec.c
test/fs/: CMakeLists.txt  test_fs.c
test/io/: CMakeLists.txt  test_io_log.c  test_io_print.c
test/mem/: CMakeLists.txt  test_alloc_arena.c  test_alloc_libc.c  test_alloc_log.c  test_mem_alloc_arena.c  test_mem_alloc_libc.c  test_mem_alloc_log.c  test_mem_alloc_pool.c  test_mem_ptr.c
test/numeric/: CMakeLists.txt  test_abs.c  test_bounds.c  test_ckd.c  test_constants.c  test_minmax.c  test_numeric_abs.c  test_numeric_bounds.c  test_numeric_ckd.c  test_numeric_constants.c  test_numeric_fp.c  test_numeric_sat.c  test_numeric_sign.c  test_sat.c  test_sign.c
test/rand/: CMakeLists.txt  test_rand.c  test_rand_rand.c
test/str/: CMakeLists.txt  test_str.c  test_str_view.c
test/string/: CMakeLists.txt  test_str.c  test_str_view.c  test_string_str.c  test_string_str_view.c
